--- a/.drone.yml
+++ b/.drone.yml
@@ -25,8 +25,7 @@ pipeline:
   rancher:
     image: peloton/drone-rancher
     url: https://rancher.nathanmalishev.com
-    access_key: ${RANCHER_ACCESS_KEY}
-    secret_key: ${RANCHER_SECRET_KEY}
+    secrets: [ rancher_access_key, rancher_secret_key ]
     service: example/go
     docker_image: nathanmalishev/go_api_example:latest
     confirm: true
